@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 May 2014; Peter Wilmott <p8952@gentoo.org> facets-2.9.3.ebuild:
+  dev-ruby/facets: Skip failing tests.
+
 *facets-2.9.3 (11 May 2014)
 
   11 May 2014; Peter Wilmott <p8952@gentoo.org> +facets-2.9.3.ebuild,
